--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
   </head>
   <body>
     <h1>Hello Microverse!</h1>
+    <h3> Day 1 of Microverse </h3>
+    <p> My day started with a welcome call, it lasted one hour and had useful information. Then we join programming time zoom call with my coding partner Moses who is very clever and friendly.</p>
+    <p> Then I set up git and vscode. The day ended well with a standup, since I made new friends and we cheered each other up.</p>
   </body>
 </html>
