main page content

--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hello Microverse!</h1>
-    <h3> Day 1 of Microverse </h3>
+    <h1>Hello Microverse Blog!</h1>
+    <h1> Day 1 </h1>
     <p> My day started with a welcome call, it lasted one hour and had useful information. Then we join programming time zoom call with my coding partner Moses who is very clever and friendly.</p>
     <p> Then I set up git and vscode. The day ended well with a standup, since I made new friends and we cheered each other up.</p>
-    <h3> Day 1 of Microverse </h3>
+    <h1> Day 2 </h1>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <h1> Day 3 </h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <h1> Day 4 </h1>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+  
+  
+  
+  
   </body>
 </html>
